force-app/main/default/objects/TopicEvent__e/TopicEvent__e.object-meta.xml
<CustomObject>
    <description>Platform Event for real-time updates when Topics are created/assigned/removed.</description>
    <label>Topic Event</label>
    <pluralLabel>Topic Events</pluralLabel>
</CustomObject>