force-app/main/default/objects/TopicEvent__e/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Action performed on Topic: create | assign | remove</description>
    <label>Action</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>