force-app/main/default/objects/TopicEvent__e/fields/TopicId__c.field-meta.xml
<CustomField>
    <fullName>TopicId__c</fullName>
    <description>Topic Id affected</description>
    <label>Topic Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>