force-app/main/default/objects/TopicEvent__e/fields/TopicName__c.field-meta.xml
<CustomField>
    <fullName>TopicName__c</fullName>
    <description>Topic Name (for display)</description>
    <label>Topic Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>